cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_33.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:38: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:38:9: Write of unused value
36.       if (enc) {
37.           c2l(iv, tout0);
38.           c2l(iv, tout1);
              ^
39.           for (l -= 8; l >= 0; l -= 8) {
40.               c2l(in, tin0);
